8152442: change in ldrd/strd macrosses required for implicit null check Reviewed-by: enevill Contributed-by: fedor.burdun@azulsystems.com